<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.noorganization.instalist.view.fragment.ProductListDialogFragment">

    <item
        android:id="@+id/menu_product_list_dialog_search"
        android:icon="@drawable/ic_search_white_36dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_product_list_dialog_search" />
    <item
        android:id="@+id/menu_product_list_dialog_sort_by"
        android:title="@string/menu_product_list_dialog_sort_by"
        android:icon="@drawable/ic_sort_white_36dp"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/menu_product_list_dialog_sort_by_name"
                android:title="@string/menu_product_list_dialog_sort_by_name"
                />
        </menu>
    </item>
    <item
        android:id="@+id/menu_product_list_dialog_filter_by"
        android:title="@string/menu_product_list_dialog_filter_by"
        android:icon="@drawable/ic_filter_list_white_36dp"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/menu_product_list_dialog_filter_by_product"
                android:title="@string/menu_product_list_dialog_filter_by_product"
                />
            <item
                android:id="@+id/menu_product_list_dialog_filter_by_recipe"
                android:title="@string/menu_product_list_dialog_filter_by_recipe"
                />
            <item
                android:id="@+id/menu_product_list_dialog_filter_by_all"
                android:title="@string/menu_product_list_dialog_filter_by_all"
                />
        </menu>
    </item>
</menu>