<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ikaufliste="http://schemas.android.com/apk/res-auto"
    xmlns:org.="http://schemas.android.com/tools">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search_product"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_search_product"
        ikaufliste:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/list_items_sort_by_name"
                android:title="@string/menu_sort_by_product_name"
                android:orderInCategory="100"
                ikaufliste:showAsAction="never"
                />
            <item
                android:id="@+id/list_items_sort_by_amount"
                android:title="@string/menu_sort_by_amount"
                android:orderInCategory="100"
                ikaufliste:showAsAction="never"
                />
        </menu>
    </item>
</menu>