<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/fragment_recipe_details_recipe_name_textview"
        android:text="@string/recipe_details_recipe_name"
        style="@style/InstalistTheme1.base_text_view_style" />

    <EditText
        android:id="@+id/fragment_recipe_details_recipe_name"
        android:hint="@string/recipe_details_recipe_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_details_product_name_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/fragment_recipe_details_add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_recipe_details_recipe_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/recipe_details_add_ingredient" />

    <ListView
        android:id="@+id/fragment_recipe_details_ingredient_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_recipe_details_add_ingredient"
        >
    </ListView>
    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_recipe_details_ingredient_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_recipe_details_add_ingredient"
        />-->
    <TextView
        android:id="@+id/recipe_details_product_name_textview"
        android:text="@string/product_details_tag_textview_text"
        style="@style/InstalistTheme1.base_text_view_style" />

    <EditText
        android:id="@+id/fragment_recipe_details_recipe_tags"
        android:hint="@string/product_details_tag_edittext_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_details_product_name_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/fragment_recipe_details_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_details_add"
        />

    <Button
        android:id="@+id/fragment_recipe_details_cancel_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_details_cancel"
        />
</RelativeLayout>