<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_fragment_general"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <org.noorganization.instalist.view.customview.AmountPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/product_details_amount"
            android:layout_gravity="center_vertical"
            android:layout_weight="0" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_details_unit"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/product_details_product_name"
            android:hint="@string/product_details_product_name_hint"
            style="@style/InstalistTheme1.base_edit_text_style"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced"
        android:id="@+id/product_details_advanced"
        android:button="@drawable/ic_expand_black_24dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/product_details_advanced_contents">

        <EditText
            android:id="@+id/product_details_tag"
            android:hint="@string/product_details_tags_hint"
            style="@style/InstalistTheme1.base_edit_text_style" />

        <EditText
            android:id="@+id/product_details_step"
            android:hint="@string/product_details_step_hint"
            style="@style/InstalistTheme1.base_edit_text_numeric_style" />

    </LinearLayout>

    <Button
        android:id="@+id/product_details_action_button_new_or_update"
        android:text="@string/product_details_action_add"
        android:layout_gravity="end"
        style="@style/InstalistTheme1.base_flatten_button" />



</LinearLayout>
