<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/for_background_color"
    >

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_product_list_dialog_product_list_view"
        android:layout_above="@+id/testRecipeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_list_dialog_cancel"
        android:id="@+id/fragment_product_list_dialog_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_list_dialog_add"
        android:id="@+id/fragment_product_list_dialog_add_products_to_list"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_list_dialog_add_new_product"
        android:id="@+id/fragment_product_list_dialog_add_new_product"
        android:layout_above="@+id/fragment_product_list_dialog_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/fragment_product_list_dialog_add_products_to_list"
        android:layout_alignEnd="@+id/fragment_product_list_dialog_add_products_to_list" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TestAddRecipe"
        android:id="@+id/testRecipeButton"
        android:layout_above="@+id/fragment_product_list_dialog_add_new_product"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>